fix Fix_Tasks_DnD